Fixed uneven squares and removed grey outlining on board

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 #container {
     background-color: aliceblue;
-    width: 50vw;
+    width: 85vw;
     height: 85vh;
     position: absolute;
     top:0;
@@ -14,9 +14,4 @@ body{
     right: 0;
     margin: auto;
     border-radius: 10px;
-}
-
-#boxes{
-    display: flex;
-
 }
